--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@parcel/resolver-glob": "^2.8.3",
     "autoprefixer": "^10.4.13",
     "eslint-plugin-react-hooks": "^4.6.0",
     "parcel": "^2.8.3",
@@ -27,6 +28,8 @@
     "tailwindcss": "^3.2.4"
   },
   "dependencies": {
+    "@parcel/transformer-postcss": "^2.8.3",
+    "@parcel/transformer-svg-react": "^2.8.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "react": "^18.2.0",
