--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "parcel": "^2.8.3",
     "postcss": "^8.4.21",
+    "postcss-nesting": "^11.2.1",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
     "process": "^0.11.10",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.7"
   },
   "dependencies": {
     "@parcel/transformer-postcss": "^2.8.3",
